[package]
name = "shisho"
version = "0.1.0"
authors = ["Takashi Yoneuchi <takashi.yoneuchi@shift-js.info>"]
edition = "2018"

[[bin]]
name = "shisho"
test = false
bench = false

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
clap-verbosity-flag = "0.3.1"
structopt = "0.3.21"
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = "0.19.5"
serde =  { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.5.4"

[dependencies.tree-sitter-hcl]
path = "./third_party/tree-sitter-hcl"

[dependencies.tree-sitter-hcl-query]
path = "./third_party/tree-sitter-hcl-query"

[dependencies.tree-sitter-go]
path = "./third_party/tree-sitter-go"

[dependencies.tree-sitter-go-query]
path = "./third_party/tree-sitter-go-query"