[package]
name = "shisho"
version = "0.3.0"
authors = ["Flatt Security Inc.<t.yoneuchi@flatt.tech>"]
edition = "2018"
license = "AGPL-3.0-only"

[[bin]]
name = "shisho"
test = false
bench = false

[dependencies]
log = "0.4"
clap-verbosity-flag = "0.3.1"
structopt = "0.3.21"
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = "0.19.5"
serde =  { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.67"
regex = "1.5.4"
ansi_term = "0.12.1"
similar = { version = "2.0.0", features = ["text", "inline", "bytes"] }
walkdir = "2"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
serde-sarif = "0.2.17"
itertools = "0.10.1"

[dependencies.tree-sitter-hcl]
path = "./third_party/tree-sitter-hcl"

[dependencies.tree-sitter-hcl-query]
path = "./third_party/tree-sitter-hcl-query"

[dependencies.tree-sitter-go]
path = "./third_party/tree-sitter-go"

[dependencies.tree-sitter-go-query]
path = "./third_party/tree-sitter-go-query"

[dependencies.tree-sitter-dockerfile]
path = "./third_party/tree-sitter-dockerfile"

[dependencies.tree-sitter-dockerfile-query]
path = "./third_party/tree-sitter-dockerfile-query"
